<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Service.AsyncTaskService.StartServiceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/app_title"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_start_async_service"
        android:layout_below="@+id/app_title"
        android:clickable="true"
        android:text="@string/string_main_1_async_service"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_service_handler"
        android:layout_below="@+id/button_start_async_service"
        android:layout_marginTop="10dp"
        android:text="@string/string_main_2_handler_service"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_service_custom_handler"
        android:layout_below="@+id/button_service_handler"
        android:layout_marginTop="10dp"
        android:text="@string/string_main_3_custom_handler_service"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_service_custom_looper"
        android:layout_below="@+id/button_service_custom_handler"
        android:layout_marginTop="10dp"
        android:text="@string/string_main_4_custom_looper_service"/>

    </RelativeLayout>
